# ros2-build-tool

./: .coverage  .gitignore  .pre-commit-config.yaml  CODE_REVIEW_REMEDIATION.md  EVIDENCE_VERIFICATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  PRODUCTION_RESTART_STATUS.md  README.md  TEST_RESULTS_20241221_163042.txt  TEST_RESULTS_20250605_000000.txt  USAGE.md  coverage.xml  execute_test_evidence.sh  multi_agent_supervisor_remediation.py  next-steps.md  project-goals.md  pyproject.toml  pytest.ini  requirements.txt  run_tests_with_evidence.py  setup.cfg  task_progress.json
.claude/: settings.local.json
.github/workflows/: ci.yml
archive/20250930_131618/: README.md  SUPERVISOR_CODE_REVIEW_REPORT.md  TEST_RESULTS_20241216_143022.txt  TEST_RESULTS_20241219_120000.txt  TEST_RESULTS_20241221_143022.txt  agent_conversation_log.txt  bandit-report.json  create_branch.sh
docker/: Dockerfile
logs/: main_20250930_131421.json  main_20250930_131458.json
requirements/: base.txt  dev.txt  test.txt
ros2_build_tool_capabilities/: __init__.py  capability_manager.py
ros2_build_tool_cli/: setup.py
ros2_build_tool_cli/ros2_build_tool_cli/: __init__.py  cli.py  wizard.py
ros2_build_tool_core/: README.md  setup.py
ros2_build_tool_core/ros2_build_tool_core/: __init__.py  build_manager.py  dependency_manager.py  environment.py  executor.py  models.py  orchestrator.py  platform.py  repo_manager.py
ros2_build_tool_generators/: setup.py
ros2_build_tool_generators/ros2_build_tool_generators/: __init__.py  foxglove_generator.py  launch_generator.py  nav2_parameter_generator.py
ros2_build_tool_generators/templates/: robot.launch.py.j2  sensors.launch.py.j2
ros2_build_tool_hardware/: README.md  setup.py
ros2_build_tool_hardware/ros2_build_tool_hardware/: __init__.py  hardware_interface_discovery.py  hardware_registry.py  package_discovery.py  urdf_parser.py
ros2_build_tool_simulation/: __init__.py  simulation_manager.py  simulation_validator.py  world_generator.py
ros2_build_tool_validation/: setup.py
ros2_build_tool_validation/ros2_build_tool_validation/: __init__.py  diagnostic_config_generator.py  qos_validator.py  tf_validator.py
ros2_build_tool_watchdog/: setup.py
ros2_build_tool_watchdog/ros2_build_tool_watchdog/: __init__.py  topic_watchdog.py
scripts/: setup-dev.ps1  setup-dev.sh
src/ros2_build_tool/: __init__.py  cli.py
src/ros2_build_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ros2_build_tool/core/: __init__.py  robot_spec.py  urdf_analyzer.py
tests/: __init__.py  conftest.py  test_hardware_discovery.py  test_models.py  test_nav2_generator.py  test_urdf_parser.py
tests/e2e/: __init__.py  test_placeholder.py
tests/integration/: __init__.py  test_end_to_end.py  test_placeholder.py
tests/unit/: test_robot_spec_parser.py  test_urdf_analyzer.py
