[metadata]
name = ros2-build-tool
version = 1.0.0
author = ROS2 Build Tool Team
author_email = team@ros2buildtool.org
description = Production-grade automation tool for ROS2 robot workspace generation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your-org/ros2-build-tool
project_urls =
    Bug Tracker = https://github.com/your-org/ros2-build-tool/issues
    Documentation = https://ros2-build-tool.readthedocs.io
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Topic :: Scientific/Engineering :: Robotics
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pydantic>=2.0.0
    pyyaml>=6.0.1
    click>=8.1.0
    rich>=13.5.0
    jinja2>=3.1.0
    gitpython>=3.1.0
    httpx>=0.24.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ros2-build-tool = ros2_build_tool.cli:main
    rbt = ros2_build_tool.cli:main

[flake8]
max-line-length = 100
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
    .eggs,
    *.egg
per-file-ignores =
    __init__.py:F401

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*